# RustMaterialsOnlyOptimizer

./: Cargo.toml  README.md
.github/workflows/: rust.yml
crates/econet_materials_optimizer/: Cargo.toml
crates/econet_materials_optimizer/src/: config.rs  main.rs  sampler.rs  service.rs  writer.rs
crates/econet_tray_kernels/: Cargo.toml
crates/econet_tray_kernels/src/: admissibility.rs  kernels.rs  lib.rs  materials.rs  region.rs  tests.rs
docs/: README.md
qpudatashards/particles/: BioPackPhoenixTrays2026v1.csv
