[package]
name = "econet_materials_optimizer"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Materials-only optimizer service for Phoenix tray recipes"
repository = "https://github.com/Doctor0Evil/EcoNet"

[dependencies]
econet_tray_kernels = { path = "../econet_tray_kernels" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
